--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 CLIENT_URL='*'
-DATABASE="mongodb://localhost:27017/PROJECTUT"
+DATABASE="mongodb://localhost:27017/PROJECTUT2"
 #DATABASE="mongodb://root:abc@100.125.146.136:27017/PROJECTUT?retryWrites=true&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-"
 #DATABASE = "mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.1.0"
 SECRET_KEY="biolab@dhbkhn"
