--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
+    "docxtemplater": "^3.65.2",
     "dotenv": "^16.1.4",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "file-saver": "^2.0.5",
     "module-alias": "^2.2.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pizzip": "^3.2.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
